objects/ssot__SurveyResponse__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CompletionDateTime__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Survey Response Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmitterId__c</fullName>
        <label>Submitter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmitterObject__c</fullName>
        <label>Submitter Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveyInvitationId__c</fullName>
        <label>Survey Invitation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveyResponseStatus__c</fullName>
        <label>Survey Response Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveyVersionId__c</fullName>
        <label>Survey Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761228331_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyResponse_SurveyInvitationId_ma_rel</label>
        <referenceTo>ssot__SurveyInvitation__dlm</referenceTo>
        <relationshipLabel>SurveyResponse_SurveyInvitationId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761228331_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761230533_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyResponse_SubmitterId_map_Accou_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>SurveyResponse_SubmitterId_map_Accou_rel</relationshipLabel>
        <relationshipName>rel_1697761230533_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761237983_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyResponse_SurveyVersionId_map_S_rel</label>
        <referenceTo>ssot__SurveyVersion__dlm</referenceTo>
        <relationshipLabel>SurveyResponse_SurveyVersionId_map_S_rel</relationshipLabel>
        <relationshipName>rel_1697761237983_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>